apps/devops-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo
  labels:
    app: devops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-demo
  template:
    metadata:
      labels:
        app: devops-demo
    spec:
      containers:
        - name: devops-demo
          image: nghiant05/devops-demo:e300f91c7655f003041896deb980f24a0a7b9b0b
          ports:
            - containerPort: 3000
