apps/devops-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo
  namespace: devops-demo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "3.0.245.154.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-demo
                port:
                  number: 80
